<resources>

    <!-- Altres -->
    <string name="welcome">"Welcome !"</string>
    <string name="app_name">MeetRunning</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="search">Search</string>
    <string name="lenguage">Lenguage</string>
    <string name="about_us">About Us</string>
    <string name="programmers">Programmers:</string>
    <string name="santi">Santiago Alves</string>
    <string name="pau">Pau Camacho</string>
    <string name="auto_bio">Hey! Insert bio here!</string>
    <string name="achievement">Congratulations. You completed</string>

    <!-- Registrar/Login -->
    <string name="username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="send_email">Send email</string>

    <!-- Ruta -->
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <!-- Titol fragments -->
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="ranking">Ranking</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="add_route">Add Route</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">test</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="route_map">Route Map</string>
    <string name="route">Route</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Profile</string>

    <!-- Botons -->
    <string name="checkBoxSignUp">I agree to the Terms of Service and Privacy Policiy</string>
    <string name="accept">Accept</string>
    <string name="logOut">LogOut</string>
    <string name="continuebtn">Continue</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>

    <!-- Errors -->
    <string name="error_auth">An error occurred authenticating the user</string>
    <string name="error_empt">Empty Fields!</string>
    <string name="error_passwd">Passwords don\'t match</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error_title">Title exists</string>

    <!-- Mesos -->
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="current_password">Current Password</string>

</resources>