<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/meetMap"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/map" />
        <item
            android:id="@+id/ranking"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="@string/ranking" />
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/favorites" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
    </group>
    <group>
        <item
            android:id="@+id/i1"
            android:checkable="false"
            android:enabled="false"
            android:title="" />
        <item
            android:id="@+id/i2"
            android:checkable="false"
            android:enabled="false"
            android:title="" />
        <item
            android:id="@+id/i3"
            android:checkable="false"
            android:enabled="false"
            android:title="" />
        <item
            android:id="@+id/i4"
            android:checkable="false"
            android:enabled="false"
            android:title="" />
        <item
            android:id="@+id/logOut"
            android:title="@string/logOut" />
    </group>
</menu>