<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="293dp"
            android:layout_height="39dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="0dp"
            android:layout_height="184dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/editTitle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTitle"
            app:layout_constraintTop_toBottomOf="@+id/editTitle" />

        <ImageView
            android:id="@+id/imgRuta"
            android:layout_width="0dp"
            android:layout_height="142dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="@+id/editDescription"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editDescription"
            app:layout_constraintTop_toBottomOf="@+id/txtTime"
            tools:src="@tools:sample/backgrounds/scenic" />

        <Button
            android:id="@+id/btnContinue"
            style="@style/buttonLog"
            android:text="@string/continuebtn"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgRuta"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtKm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_text_border"
            android:text="14 KM"
            app:layout_constraintStart_toStartOf="@+id/editDescription"
            app:layout_constraintTop_toBottomOf="@+id/editDescription" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:text="2:00:00"
            app:layout_constraintEnd_toEndOf="@+id/editDescription"
            app:layout_constraintHorizontal_bias="0.587"
            app:layout_constraintStart_toEndOf="@+id/txtKm"
            app:layout_constraintTop_toTopOf="@+id/txtKm" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
